dyn-inventory/tests/failures/init_name_string_literal.stderr
error: expected identifier
  --> tests/failures/init_name_string_literal.rs:18:17
   |
18 |     init_name = "MyInit",
   |                 ^^^^^^^^
